tests/fixtures/invalid/pow_bool_list_dict.py
# Cannot call pow() with Bool, List[int], Dict[str, int]
x = pow(True, [1, 2, 3], {"a": 1})
